--- a/introducao.html
+++ b/introducao.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Introdução<h1>
+        <p>Este trabalho tem por objetivo tratar um tema sobre DevOps.</p>
+
     <a href="index.html">Voltar para a página inicial.</a>
 </body>
 </html>
